[package]
name = "astrid-capsule-hook-bridge"
version = "0.1.0"
edition = "2024"
description = "Hook bridge capsule — maps lifecycle events to semantic hooks with merge strategies"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { path = "../../core/crates/astrid-sdk", version = "0.1.1", features = ["derive"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
