[package]
name = "astrid-capsule-hook-bridge"
version = "0.1.0"
edition = "2024"
description = "Hook bridge capsule — maps lifecycle events to semantic hooks with merge strategies"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.3.0", features = ["derive"] }
extism-pdk = "1.4.1"
uuid = { version = "1.22", features = ["rng-getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
